fix: 14-item audit - HP override, double damage, NBT loss, DRY, perf optimizations